--- a/index.html
+++ b/index.html
@@ -103,9 +103,12 @@
   </header>
 
   <section id="om">
-    <h2 class="section-title">Om meg</h2>
-    <p>Hei! Jeg er Coach Tor – personlig trener og online coach med 20 års erfaring. Jeg brenner for å gjøre trening enkelt og effektivt for alle, uansett nivå. Mitt mål er å hjelpe deg med å nå dine mål på en måte som er både bærekraftig og gøy!</p>
-  </section>
+  <h2 class="section-title">Om meg</h2>
+  <div class="om-wrapper">
+    <img src="Coach%20profil.webp" alt="Coach Tor portrett" />
+    <p>Hei! Jeg er Coach Tor – personlig trener og online coach med 20 års erfaring innen styrketrening, livsstilsendring og skreddersydd oppfølging. Jeg brenner for å gjøre trening enkelt, effektivt og gøy for alle – enten du er nybegynner eller ønsker å ta treningen til neste nivå. La meg hjelpe deg med å nå målene dine på en bærekraftig måte!</p>
+  </div>
+</section>
 
   <section id="tjenester">
     <h2 class="section-title">Tjenester</h2>
