--- a/index.html
+++ b/index.html
@@ -43,6 +43,19 @@
       margin-bottom: 20px;
       color: #007acc;
     }
+    .om-wrapper {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 30px;
+      align-items: center;
+    }
+    .om-wrapper img {
+      max-width: 200px;
+      width: 100%;
+      height: auto;
+      border-radius: 50%;
+      object-fit: cover;
+    }
     form {
       display: flex;
       flex-direction: column;
@@ -68,21 +81,6 @@
     button:hover {
       background-color: #005f99;
     }
-    .confirmation {
-      background-color: #e6f7ff;
-      color: #007acc;
-      padding: 15px;
-      border: 1px solid #b3e0ff;
-      border-radius: 5px;
-      margin-top: 20px;
-      display: none;
-    }
-    iframe {
-      width: 100%;
-      height: 800px;
-      border: none;
-      margin-top: 20px;
-    }
     footer {
       background-color: #222;
       color: #ccc;
@@ -103,12 +101,12 @@
   </header>
 
   <section id="om">
-  <h2 class="section-title">Om meg</h2>
-  <div class="om-wrapper">
-    <img src="Coach%20profil.webp" alt="Coach Tor portrett" />
-    <p>Hei! Jeg er Coach Tor – personlig trener og online coach med 20 års erfaring innen styrketrening, livsstilsendring og skreddersydd oppfølging. Jeg brenner for å gjøre trening enkelt, effektivt og gøy for alle – enten du er nybegynner eller ønsker å ta treningen til neste nivå. La meg hjelpe deg med å nå målene dine på en bærekraftig måte!</p>
-  </div>
-</section>
+    <h2 class="section-title">Om meg</h2>
+    <div class="om-wrapper">
+      <img src="Coach%20profil.webp" alt="Coach Tor portrett" />
+      <p>Hei! Jeg er Coach Tor – personlig trener og online coach med 20 års erfaring innen styrketrening, livsstilsendring og skreddersydd oppfølging. Jeg brenner for å gjøre trening enkelt, effektivt og gøy for alle – enten du er nybegynner eller ønsker å ta treningen til neste nivå. La meg hjelpe deg med å nå målene dine på en bærekraftig måte!</p>
+    </div>
+  </section>
 
   <section id="tjenester">
     <h2 class="section-title">Tjenester</h2>
