--- a/index.html
+++ b/index.html
@@ -109,14 +109,80 @@
   </section>
 
   <section id="tjenester">
-    <h2 class="section-title">Tjenester</h2>
+  <h2 class="section-title">Tjenester</h2>
+
+  <div>
+    <h3>🏋️‍♂️ 1. Online PT – Trening og Kosthold (Full Pakke)</h3>
     <ul>
-      <li>Skreddersydde treningsprogram</li>
-      <li>Kostholdsplaner for ulike mål</li>
-      <li>1-til-1 online coaching</li>
-      <li>Oppfølging via app</li>
+      <li>Skreddersydd treningsprogram</li>
+      <li>Personlig kostholdsplan</li>
+      <li>Ukentlig innsjekk og justeringer</li>
+      <li>Tilgang til app for logging og fremgang</li>
+      <li>Chat-støtte ved behov</li>
     </ul>
-  </section>
+    <p><strong>Pris:</strong><br>
+    kr 2.490,- / måned (ingen binding)<br>
+    kr 2.190,- / måned (ved 3 måneders binding)</p>
+  </div>
+
+  <div>
+    <h3>🏃‍♂️ 2. Online PT – Kun Trening</h3>
+    <ul>
+      <li>Skreddersydd treningsprogram</li>
+      <li>Ukentlig innsjekk og justeringer</li>
+      <li>Tilgang til app for logging og fremgang</li>
+      <li>Chat-støtte ved behov</li>
+    </ul>
+    <p><strong>Pris:</strong><br>
+    kr 1.890,- / måned (ingen binding)<br>
+    kr 1.690,- / måned (ved 3 måneders binding)</p>
+  </div>
+
+  <div>
+    <h3>🥗 3. Online Kostholdsveiledning</h3>
+    <ul>
+      <li>Skreddersydd kostholdsplan</li>
+      <li>Ukentlig innsjekk og justeringer</li>
+      <li>Tilgang til app for logging og fremgang</li>
+      <li>Chat-støtte ved behov</li>
+    </ul>
+    <p><strong>Pris:</strong><br>
+    kr 1.890,- / måned (ingen binding)<br>
+    kr 1.690,- / måned (ved 3 måneders binding)</p>
+  </div>
+
+  <div>
+    <h3>🗣️ 4. Enkel Konsultasjon (55 minutter)</h3>
+    <ul>
+      <li>Enkelttime for kartlegging, råd og veiledning innen trening og/eller kosthold</li>
+      <li>Oppsummering og anbefalinger sendt på e-post</li>
+    </ul>
+    <p><strong>Pris:</strong><br>
+    kr 690,-</p>
+  </div>
+
+  <div>
+    <h3>📦 5. Startpakke – 4 Uker</h3>
+    <ul>
+      <li>Skreddersydd trenings- og kostholdsprogram</li>
+      <li>2 oppfølgingssamtaler (video eller telefon)</li>
+      <li>Tilgang til app for logging og fremgang</li>
+      <li>Chat-støtte ved behov</li>
+    </ul>
+    <p><strong>Pris:</strong><br>
+    kr 2.990,-</p>
+  </div>
+
+  <div>
+    <h3>🧾 6. Ekstra Tjenester</h3>
+    <ul>
+      <li>Tillegg for ukentlig videomøte: kr 400,-</li>
+      <li>Tillegg for teknisk analyse av øvelser (video): kr 300,-</li>
+      <li>Tillegg for skreddersydd PDF-program: kr 250,-</li>
+    </ul>
+  </div>
+</section>
+
 
   <section id="kontakt">
     <h2 class="section-title">Kontakt meg</h2>
