--- a/index.html
+++ b/index.html
@@ -99,7 +99,26 @@
       <a href="#kontakt">Kontakt</a>
     </nav>
   </header>
+<section id="hero" style="text-align: center; padding: 60px 20px; background-color: #e6f2fa;">
+  <h1 style="font-size: 2.5em; color: #007acc; margin-bottom: 20px;">Trening gjort enkelt. Coaching som faktisk funker.</h1>
+  <p style="font-size: 1.2em; max-width: 700px; margin: auto; margin-bottom: 30px;">
+    Personlig trener og online coach med 20 års erfaring.<br>
+    Skreddersydde programmer – tilpasset deg, livet ditt og målene dine.
+  </p>
+  <a href="#kontakt" style="
+    background-color: #007acc;
+    color: white;
+    padding: 15px 30px;
+    font-size: 1.1em;
+    border-radius: 8px;
+    text-decoration: none;
+    font-weight: bold;
+    display: inline-block;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+  ">Kom i gang i dag</a>
+</section>
 
+  
   <section id="om">
     <h2 class="section-title">Om meg</h2>
     <div class="om-wrapper">
