--- a/index.html
+++ b/index.html
@@ -202,6 +202,28 @@
   </div>
 </section>
 
+  <section id="omtaler" style="background-color: #f0f8ff; padding: 60px 20px; text-align: center;">
+  <h2 class="section-title">Hva sier kundene mine?</h2>
+  <div style="max-width: 900px; margin: auto; display: grid; gap: 30px; grid-template-columns: 1fr;">
+
+    <div style="background: white; padding: 20px; border-radius: 10px; box-shadow: 0 0 10px #ccc;">
+      <p>“Coach Tor hjalp meg ned 10 kg uten å gi opp Pepsi Max!”</p>
+      <strong>– Linn, 34 år</strong>
+    </div>
+
+    <div style="background: white; padding: 20px; border-radius: 10px; box-shadow: 0 0 10px #ccc;">
+      <p>“Jeg har aldri følt meg sterkere – og det med 2 barn og fulltidsjobb!”</p>
+      <strong>– Martin, 41 år</strong>
+    </div>
+
+    <div style="background: white; padding: 20px; border-radius: 10px; box-shadow: 0 0 10px #ccc;">
+      <p>“Treningen ble endelig noe jeg gleder meg til, ikke noe jeg gruer meg til.”</p>
+      <strong>– Camilla, 29 år</strong>
+    </div>
+
+  </div>
+</section>
+
 
   <section id="kontakt">
     <h2 class="section-title">Kontakt meg</h2>
