--- a/index.html
+++ b/index.html
@@ -224,6 +224,43 @@
   </div>
 </section>
 
+  <section id="prosess" style="padding: 60px 20px; background-color: #ffffff; text-align: center;">
+  <h2 class="section-title">Slik fungerer det</h2>
+  <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap: 30px; max-width: 1000px; margin: auto;">
+
+    <div>
+      <div style="font-size: 2.5em;">📩</div>
+      <h3>1. Du tar kontakt</h3>
+      <p>Send meg en melding eller fyll ut skjemaet – så tar vi en uforpliktende prat.</p>
+    </div>
+
+    <div>
+      <div style="font-size: 2.5em;">🎯</div>
+      <h3>2. Vi setter mål</h3>
+      <p>Vi kartlegger hvor du er i dag, og hva du ønsker å oppnå – realistisk og motiverende.</p>
+    </div>
+
+    <div>
+      <div style="font-size: 2.5em;">📲</div>
+      <h3>3. Du får tilgang til appen</h3>
+      <p>Her får du treningsplan, kosthold, fremgang og støtte – alltid tilgjengelig.</p>
+    </div>
+
+    <div>
+      <div style="font-size: 2.5em;">💪</div>
+      <h3>4. Du gjør jobben – jeg følger opp</h3>
+      <p>Du trener og spiser som planlagt – jeg justerer, støtter og heier underveis.</p>
+    </div>
+
+    <div>
+      <div style="font-size: 2.5em;">🚀</div>
+      <h3>5. Du får resultater</h3>
+      <p>Vi evaluerer og feirer fremgangen – og bygger videre på det du har fått til.</p>
+    </div>
+
+  </div>
+</section>
+
 
   <section id="kontakt">
     <h2 class="section-title">Kontakt meg</h2>
