--- a/index.html
+++ b/index.html
@@ -261,6 +261,60 @@
   </div>
 </section>
 
+  <section id="sammenligning" style="padding: 60px 20px; background-color: #f9fbfd;">
+  <h2 class="section-title" style="text-align: center;">Hva får du i de ulike pakkene?</h2>
+  <div style="overflow-x: auto;">
+    <table style="width: 100%; max-width: 900px; margin: auto; border-collapse: collapse; text-align: center;">
+      <thead>
+        <tr style="background-color: #007acc; color: white;">
+          <th style="padding: 15px;">Innhold</th>
+          <th style="padding: 15px;">Full Pakke</th>
+          <th style="padding: 15px;">Kun Trening</th>
+          <th style="padding: 15px;">Kosthold</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td style="padding: 12px; border: 1px solid #ccc;">Skreddersydd treningsprogram</td>
+          <td>✅</td>
+          <td>✅</td>
+          <td>❌</td>
+        </tr>
+        <tr>
+          <td style="padding: 12px; border: 1px solid #ccc;">Skreddersydd kostholdsplan</td>
+          <td>✅</td>
+          <td>❌</td>
+          <td>✅</td>
+        </tr>
+        <tr>
+          <td style="padding: 12px; border: 1px solid #ccc;">App for logging og fremgang</td>
+          <td>✅</td>
+          <td>✅</td>
+          <td>✅</td>
+        </tr>
+        <tr>
+          <td style="padding: 12px; border: 1px solid #ccc;">Ukentlig innsjekk og justeringer</td>
+          <td>✅</td>
+          <td>✅</td>
+          <td>✅</td>
+        </tr>
+        <tr>
+          <td style="padding: 12px; border: 1px solid #ccc;">Chat-støtte ved behov</td>
+          <td>✅</td>
+          <td>✅</td>
+          <td>✅</td>
+        </tr>
+        <tr>
+          <td style="padding: 12px; border: 1px solid #ccc; font-weight: bold;">Pris</td>
+          <td>2.490,-<br>(2.190,- m/ binding)</td>
+          <td>1.890,-<br>(1.690,- m/ binding)</td>
+          <td>1.890,-<br>(1.690,- m/ binding)</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</section>
+
 
   <section id="kontakt">
     <h2 class="section-title">Kontakt meg</h2>
