--- a/index.html
+++ b/index.html
@@ -315,6 +315,24 @@
   </div>
 </section>
 
+  <section id="cta" style="background-color: #007acc; color: white; text-align: center; padding: 60px 20px;">
+  <h2 style="font-size: 2em; margin-bottom: 20px;">Klar for å komme i gang?</h2>
+  <p style="font-size: 1.2em; max-width: 700px; margin: auto; margin-bottom: 30px;">
+    Du trenger ikke være i toppform for å starte – men du må starte for å komme i toppform.<br>
+    Jeg hjelper deg hele veien. Ingen forpliktelser. Bare ekte fremgang.
+  </p>
+  <a href="#kontakt" style="
+    background-color: white;
+    color: #007acc;
+    padding: 15px 30px;
+    font-size: 1.1em;
+    border-radius: 8px;
+    text-decoration: none;
+    font-weight: bold;
+    display: inline-block;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+  ">Start reisen din i dag</a>
+</section>
 
   <section id="kontakt">
     <h2 class="section-title">Kontakt meg</h2>
