--- a/index.html
+++ b/index.html
@@ -334,6 +334,34 @@
   ">Start reisen din i dag</a>
 </section>
 
+<section id="faq" style="padding: 60px 20px; background-color: #f0f8ff;">
+  <h2 class="section-title" style="text-align: center;">Ofte stilte spørsmål</h2>
+  <div style="max-width: 800px; margin: auto; display: flex; flex-direction: column; gap: 30px;">
+
+    <div>
+      <h3>❓ Må jeg være i form for å starte?</h3>
+      <p>Nei! Jeg tilpasser opplegget til akkurat der du er nå – uansett om du er nybegynner eller erfaren.</p>
+    </div>
+
+    <div>
+      <h3>❓ Trenger jeg tilgang til treningssenter?</h3>
+      <p>Nei! Du kan få programmer til hjemmetrening, uansett utstyrsnivå – vi finner en løsning som passer deg.</p>
+    </div>
+
+    <div>
+      <h3>❓ Er det bindingstid?</h3>
+      <p>Nei, alle pakker kan kjøpes uten binding – men du får rabatter om du binder for 3 måneder.</p>
+    </div>
+
+    <div>
+      <h3>❓ Hvordan får jeg oppfølging?</h3>
+      <p>Gjennom app, ukentlige innsjekker, meldinger og evt. videosamtaler – du er aldri alene.</p>
+    </div>
+
+  </div>
+</section>
+
+  
   <section id="kontakt">
     <h2 class="section-title">Kontakt meg</h2>
     <form name="kontakt" method="POST" data-netlify="true">
