--- a/index.html
+++ b/index.html
@@ -372,6 +372,22 @@
     </form>
   </section>
 
+<section id="instagram" style="padding: 40px 20px; text-align: center;">
+  <h2 class="section-title">Følg meg på Instagram</h2>
+  <p>Se daglige tips, øvelser og innsikt fra hverdagen min som coach.</p>
+  <a href="https://instagram.com/coach_torbarsgaard" target="_blank" style="
+    background-color: #E1306C;
+    color: white;
+    padding: 12px 24px;
+    border-radius: 8px;
+    text-decoration: none;
+    font-weight: bold;
+    display: inline-block;
+    margin-top: 10px;
+  ">@coach_torbarsgaard</a>
+</section>
+
+  
   <footer>
     <p>&copy; 2025 Coach Tor. Alle rettigheter reservert.</p>
   </footer>
