--- a/index.html
+++ b/index.html
@@ -93,11 +93,17 @@
   <header>
     <img src="FullLogo_Transparent_NoBuffer.png" alt="Coach Tor logo" />
     <h1>Coach Tor</h1>
-    <nav>
-      <a href="#om">Om meg</a>
-      <a href="#tjenester">Tjenester</a>
-      <a href="#kontakt">Kontakt</a>
-    </nav>
+   <nav>
+  <a href="#om">Om meg</a>
+  <a href="#tjenester">Tjenester</a>
+  <a href="#omtaler">Omtaler</a>
+  <a href="#prosess">Slik fungerer det</a>
+  <a href="#sammenligning">Sammenlign</a>
+  <a href="#faq">FAQ</a>
+  <a href="#instagram">Instagram</a>
+  <a href="#kontakt">Kontakt</a>
+</nav>
+
   </header>
 <section id="hero" style="text-align: center; padding: 60px 20px; background-color: #e6f2fa;">
   <h1 style="font-size: 2.5em; color: #007acc; margin-bottom: 20px;">Trening gjort enkelt. Coaching som faktisk funker.</h1>
